# rs-jni-native-example

./: .gitignore  Cargo.toml  README.md
native-loader/: .gitignore  build.gradle
native-loader/src/main/java/dev/dload/: NativeLoader.java
src/: lib.rs
